<resources>
    <!-- Home activity -->
    <string name="app_name">D&amp;D Manager</string>
    <string name="no_campaigns">No campaigns found. Ready to start a new one? Hit the button above
        so we can get started!</string>
    <string name="edit_campaign">Edit</string>
    <string name="resume_create_campaign">Resume</string>
    <string name="more_info">View Campaign</string>
    <string name="btn_delete_campaign">Delete</string>
    <string name="alert_del_campaign_title">Confirm Deletion</string>
    <string name="alert_del_campaign_message">Please type in your character\'s full name to
        confirm deletion.</string>
    <string name="error_mismatch_character_name">Character name does not match</string>

    <!-- Campaign adapter ids -->
    <item name="campaign_id" type="id" />
    <item name="campaign_progress" type="id" />
    <item name="campaign_character_name" type="id"></item>
    <item name="campaign_position" type="id"></item>

    <!-- Class card adapter ids -->
    <item name="class_card_position" type="id" />

    <!-- Background card adapter ids -->
    <item name="background_card_position" type="id" />

    <!-- New/edit campaign activity -->
    <string name="activity_title_new_campaign">New Campaign</string>
    <string name="activity_title_edit_campaign">Edit Campaign</string>
    <string name="error_general">An error occurred. Please try again in a few
        minutes.</string>
    <string name="error_missing_campaign_id">Cannot edit campaign. Please try again in a few
        minutes.</string>
    <string name="finish_edit_campaign">Campaign changes saved successfully.</string>
    <string name="edit_general_info">Edit General Information</string>
    <string name="edit_race">Select a New Race</string>
    <string name="edit_class">Try Out a New Class</string>
    <string name="edit_background">A Change in Roots</string>

    <!-- Buttons -->
    <string name="btn_save_campaign">Save Campaign</string>

    <!-- Headings -->
    <string name="section_heading_player">About You</string>
    <string name="section_heading_character">About Your Character</string>

    <!-- Player section -->
    <string name="player_name">Player Name</string>

    <!-- Character section -->
    <string name="character_fname">First Name</string>
    <string name="character_lname">Last Name</string>
    <string name="character_gender">Select Gender</string>
    <string-array name="gender_options">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="character_alignment">Select Alignment</string>
    <string-array name="alignment_options">
        <item>Select Alignment</item>
        <item>Lawful Good</item>
        <item>Neutral Good</item>
        <item>Chaotic Good</item>
        <item>Lawful Neutral</item>
        <item>True Neutral</item>
        <item>Chaotic Neutral</item>
        <item>Lawful Evil</item>
        <item>Neutral Evil</item>
        <item>Chaotic Evil</item>
    </string-array>
    <string name="character_level">Level</string>
    <string name="character_age">Age</string>
    <string name="character_exp">Exp Points</string>
    <string name="character_height">Height</string>
    <string name="character_weight">Weight</string>

    <!-- Character section error messages -->
    <string name="error_gender">Gender required</string>
    <string name="error_alignment">Alignment required</string>

    <!-- Character race selection activity -->
    <string name="activity_title_character_race">Character Race Selection</string>
    <string name="no_character_race_title">No title available.</string>
    <string name="no_character_race_description">No description available.</string>
    <string name="finish_select_race">Race changes saved successfully.</string>

    <!-- Character class selection activity -->
    <string name="activity_title_character_class">Character Class Selection</string>
    <string name="btn_select_class">Select Class</string>
    <string name="no_character_class_title">No title available.</string>
    <string name="no_character_class_description">No description available.</string>
    <string name="no_character_class_details">No additional details available.</string>
    <string name="expand_icon_accessibility">Toggle Additional Details</string>
    <string name="finish_select_class">Class changes saved successfully.</string>

    <!-- Character background selection activity -->
    <string name="activity_title_character_background">Character Background Selection</string>
    <string name="btn_select_background">Select Background</string>
    <string name="no_character_background_title">No title available.</string>
    <string name="no_character_background_description">No description available.</string>
    <string name="no_character_background_details">No additional details available.</string>
    <string name="finish_select_background">Background changes saved successfully.</string>

</resources>
