<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_new_campaign"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        tools:context="com.drazard.ddmanager.NewCampaignActivity">

        <!-- New campaign toolbar -->
        <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/new_campaign_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/new_campaign"
            app:titleTextColor="@color/primaryText" />

        <!-- Player section -->
        <TextView
            android:id="@+id/player_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_campaign_toolbar"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/section_heading_player"
            android:textSize="24dp" />

        <View
            android:id="@+id/form_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/player_section"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/listDivider" />

        <EditText
            android:id="@+id/player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/player_section"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/player_name"
            android:inputType="textPersonName"
            android:padding="12dp" />

        <!-- Character section -->
        <TextView
            android:id="@+id/character_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/player_name"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/section_heading_character"
            android:textSize="24dp" />

        <View
            android:id="@+id/form_divider_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/character_section"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/listDivider" />

        <EditText
            android:id="@+id/character_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/form_divider_2"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/character_fname"
            android:inputType="textPersonName"
            android:padding="12dp" />

        <EditText
            android:id="@+id/character_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/character_fname"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/character_lname"
            android:inputType="textPersonName"
            android:padding="12dp" />

        <Spinner
            android:id="@+id/character_gender"
            style="@android:style/Widget.Holo.TextView.SpinnerItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/character_lname"
            android:prompt="@string/character_gender"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dialog"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingRight="50dp"
            android:paddingEnd="50dp" />

        <Spinner
            android:id="@+id/character_alignment"
            style="@android:style/Widget.Holo.TextView.SpinnerItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/character_gender"
            android:prompt="@string/character_alignment"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dialog"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingRight="50dp"
            android:paddingEnd="50dp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/character_age_exp_section"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/character_alignment"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/character_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:ems="10"
                android:hint="@string/character_age"
                android:inputType="text"
                android:padding="12dp" />

            <EditText
                android:id="@+id/character_exp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:ems="10"
                android:hint="@string/character_exp"
                android:inputType="text"
                android:padding="12dp" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/character_measurements_section"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/character_age_exp_section"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/character_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:ems="10"
                android:hint="@string/character_height"
                android:inputType="text"
                android:padding="12dp" />

            <EditText
                android:id="@+id/character_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:ems="10"
                android:hint="@string/character_weight"
                android:inputType="text"
                android:padding="12dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_save_campaign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/character_measurements_section"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_save_campaign"/>

    </RelativeLayout>

</ScrollView>